# devops-tools

./: .gitignore  DEPLOY-K8S.md  DEPLOY-WEB.md  DEVOPS-CI.md  DOQ-IMAGE.md  DOQ-IMAGES.md  Makefile  README.md  UPDATE_GUIDE.md  api_server.py  config.py  config_utils.py  devops.py  devops_ci.py  doq.py  install.sh  k8s-deployer.json.template  ns.json  plugin_manager.py  pyproject.toml  rancher_api.py  rancher_cli.py  requirements.txt  sast-report-saas-be-access-manager-develop-20251114-152342.html  sast-report-saas-be-access-manager-develop-20251114-152616.sarif  sast-report-saas-be-access-manager-develop-20251114-153619.html  setup.py  uninstaller.sh  version.py  web-deployer.json.template
.github/: copilot-instructions.md
docs/: API_SERVER.md  AUTHENTICATION.md  DEPLOY-K8S.md  DEPLOY-WEB.md  DEVOPS-CI.md  DOQ-IMAGE.md  ERROR_MESSAGING_GUIDE.md  GIT-COMMANDS.md  GITOPS-WORKFLOW.md  UPDATE_GUIDE.md
kustomize/redis/: README.md  auth-api-configmap.yaml  auth-api-deployment.yaml  auth-api-service.yaml  auth_api.py  kustomization.yaml  redis-commander-deployment.yaml  redis-commander-service.yaml  redis-service.yaml  redis-statefulset.yaml  test.py
plugins/: __init__.py  base.py  devops_ci.py  docker_utils.py  k8s_deployer.py  sast.py  set_image_yaml.py  shared_helpers.py  ssh_helper.py  web_deployer.py
scripts/: setup-auth.sh
tests/: test_base_plugin.py  test_devops_ci.py  test_k8s_deployer.py
