[project]
name = "devops-tools"
version = "1.0.0"
description = "DevOps Tools - Simple CLI tool for managing Rancher resources"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "DevOps Team"}
]
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
]

[project.scripts]
devops = "devops:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "devops.py",
    "rancher_api.py",
    "config.py",
    "version.py",
    "README.md",
]

