[project]
name = "devops-q"
version = "1.0.0"
description = "DevOps Q - Simple CLI tool for managing Rancher resources"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "DevOps Team"}
]
dependencies = [
    "requests>=2.31.0",
    "urllib3<2.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
]

[project.scripts]
doq = "doq:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "doq.py",
    "rancher_api.py",
    "config.py",
    "version.py",
    "devops_ci.py",
    "README.md",
]

