[project]
name = "devops-q"
version = "1.0.0"
description = "DevOps Q - Simple CLI tool for managing Rancher resources"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "DevOps Team"}
]
dependencies = [
    "requests>=2.31.0",
    "urllib3<2.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
]

[project.scripts]
doq = "doq:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "doq.py",
    "rancher_api.py",
    "config.py",
    "version.py",
    "plugin_manager.py",
    "config_utils.py",
    "api_server.py",
    "plugins/__init__.py",
    "plugins/shared_helpers.py",
    "plugins/devops_ci.py",
    "plugins/docker_utils.py",
    "plugins/ssh_helper.py",
    "plugins/web_deployer.py",
    "plugins/k8s_deployer.py",
    "plugins/set_image_yaml.py",
    "plugins/sast.py",
    "README.md",
]

